# Cinder-Renderer

./: .gitignore  Cargo.toml  README.md  bind_group_notes.txt  build.rs  egui.json  frag.spv  setup_molten_vk.sh  shader_structs.rs  test.rs  test.txt  text.txt  vert.spv
camera/: Cargo.toml
camera/src/: lib.rs
cinder/: Cargo.toml
cinder/src/: lib.rs
cinder/src/backend/: mod.rs
cinder/src/backend/empty/: mod.rs
cinder/src/backend/metal/: mod.rs
cinder/src/backend/vulkan/: mod.rs
cinder/src/backend/vulkan/command_buffer/: mod.rs
cinder/src/backend/vulkan/pipeline/: mod.rs
cinder/src/backend/vulkan/program/: mod.rs
cinder/src/backend/vulkan/shader/: mod.rs  program.rs  shader.rs
cinder/src/cinder/: mod.rs
cinder/src/context/: mod.rs
cinder/src/context/graphics_context/: mod.rs
cinder/src/context/render_context/: mod.rs
cinder/src/context/upload_context/: mod.rs
cinder/src/context/upload_context.rs/: mod.rs
cinder/src/cpu_allocator/: mod.rs
cinder/src/device/: mod.rs
cinder/src/device/instance/: mod.rs
cinder/src/device/surface/: mod.rs
cinder/src/gpu_allocator/: mod.rs
cinder/src/init/: mod.rs
cinder/src/instance/: debug.rs  mod.rs
cinder/src/profiling/: mod.rs
cinder/src/renderer/: mod.rs
cinder/src/resoruces/: mod.rs
cinder/src/resoruces/bind_group/: mod.rs  new.rs
cinder/src/resoruces/buffer/: mod.rs
cinder/src/resoruces/image/: mod.rs
cinder/src/resoruces/memory/: mod.rs
cinder/src/resoruces/pipeline/: mod.rs  push_constant.rs
cinder/src/resoruces/render_pass/: mod.rs
cinder/src/resoruces/shader/: mod.rs
cinder/src/resoruces/texture/: mod.rs
cinder/src/resource_manager/: mod.rs
cinder/src/resource_pool/: handle.rs  mod.rs  pool.rs
cinder/src/resources/bind_group/: mod.rs
cinder/src/resources/buffer/: mod.rs
cinder/src/resources/image/: mod.rs
cinder/src/resources/memory/: mod.rs
cinder/src/resources/pipeline/: compute.rs  graphics.rs  mod.rs
cinder/src/resources/sampler/: mod.rs
cinder/src/resources/shader/: mod.rs
cinder/src/surface/: mod.rs
cinder/src/swapchain/: mod.rs
cinder/src/util/: mod.rs
cinder/src/view/: mod.rs
cinder/src/view/swapchain/: mod.rs
crates/lib/camera/: Cargo.toml
crates/lib/camera/src/: lib.rs
crates/lib/cinder/: Cargo.toml
crates/lib/cinder/src/: lib.rs
crates/lib/cinder/src/cinder/: mod.rs
crates/lib/cinder/src/command_queue/: mod.rs
crates/lib/cinder/src/context/: mod.rs
crates/lib/cinder/src/context/render_context/: mod.rs
crates/lib/cinder/src/context/upload_context/: mod.rs
crates/lib/cinder/src/device/: mod.rs  properties.rs
crates/lib/cinder/src/device/instance/: debug.rs  mod.rs
crates/lib/cinder/src/device/surface/: mod.rs
crates/lib/cinder/src/render_graph/: mod.rs  serde_repr.rs
crates/lib/cinder/src/resources/: manager.rs  mod.rs
crates/lib/cinder/src/resources/bind_group/: mod.rs
crates/lib/cinder/src/resources/buffer/: mod.rs
crates/lib/cinder/src/resources/image/: mod.rs
crates/lib/cinder/src/resources/memory/: mod.rs
crates/lib/cinder/src/resources/pipeline/: compute.rs  graphics.rs  mod.rs
crates/lib/cinder/src/resources/sampler/: mod.rs
crates/lib/cinder/src/resources/shader/: mod.rs
crates/lib/cinder/src/shader_hot_reloader/: mod.rs
crates/lib/cinder/src/swapchain/: mod.rs
crates/lib/cinder/src/synch/: mod.rs
crates/lib/cinder/src/util/: mod.rs
crates/lib/cinder/src/view/: mod.rs
crates/lib/cinder/src/view/swapchain/: mod.rs
crates/lib/egui-integration/: Cargo.toml
crates/lib/egui-integration/shaders/: egui.frag  egui.vert
crates/lib/egui-integration/shaders/spv/: egui.frag.spv
crates/lib/egui-integration/src/: helpers.rs  lib.rs  sdl.rs
crates/lib/ember/: Cargo.toml
crates/lib/ember/src/: lib.rs
crates/lib/ember/src/gpu_allocator/: mod.rs
crates/lib/frame-graph/: Cargo.toml
crates/lib/frame-graph/src/: lib.rs
crates/lib/geometry/: Cargo.toml
crates/lib/geometry/src/: lib.rs  vertex.rs
crates/lib/input/: Cargo.toml
crates/lib/input/src/: lib.rs
crates/lib/render_graph/: Cargo.toml
crates/lib/render_graph/src/: lib.rs
crates/lib/renderer/: Cargo.toml
crates/lib/renderer/src/: lib.rs
crates/lib/renderer/src/command_queue/: mod.rs
crates/lib/renderer/src/device/: extensions.rs  mod.rs  properties.rs
crates/lib/renderer/src/renderer/: mod.rs
crates/lib/renderer/src/resources/: manager.rs  mod.rs
crates/lib/renderer/src/shader_hot_reloader/: mod.rs
crates/lib/renderer/src/util/: mod.rs
crates/lib/resource-manager/: Cargo.toml
crates/lib/resource-manager/src/: handle.rs  lib.rs  pool.rs
crates/lib/scene/: Cargo.toml
crates/lib/scene/src/: lib.rs  material.rs  obj.rs  vertex.rs
crates/lib/scene/src/mesh/: mod.rs
crates/lib/scene/src/primitives/: quad.rs
crates/lib/scene_2/: Cargo.toml
crates/lib/scene_2/src/: lib.rs
crates/lib/shader-hot-reloader/: Cargo.toml
crates/lib/shader-hot-reloader/src/: lib.rs
crates/lib/tracking_allocator/: Cargo.toml
crates/lib/tracking_allocator/src/: lib.rs
crates/lib/util/: Cargo.toml
crates/lib/util/src/: lib.rs  sdl_utils.rs
crates/lib/zero-copy-assets/: Cargo.toml
crates/lib/zero-copy-assets/src/: lib.rs
egui-integration/: Cargo.toml
egui-integration/shaders/: egui.frag  egui.vert
egui-integration/shaders/spv/: egui.frag.spv  egui.vert.spv
egui-integration/src/: lib.rs
ember/src/gpu_allocator/: mod.rs
input/: Cargo.toml
input/src/: keyboard.rs  mouse.rs
old-stuff/: main.rs  renderer.rs
old-stuff/app/: mod.rs
scene/: Cargo.toml
scene/src/: lib.rs  obj.rs  shared.rs
shaders/: default.frag  default.vert  depth_reduce.comp  shared.glsl  triangle.vert
shaders/spv/: default.frag.spv  default.vert.spv  depth_reduce.comp.spv  mesh.vert.spv  triangle.vert.spv
src/: depth_pyramid.rs  main.rs  renderer.rs
src/app/: mod.rs  runtime.rs
src/old-stuff/: main.rs
src/old-stuff/app/: mod.rs  runtime.rs
src/old-stuff/ui/: mod.rs
src/ui/: mod.rs
tools/: configure_molten_vk_vars.sh  configure_vulkan_sdk_path.sh  setup_molten_vk.sh
util/: Cargo.toml
util/src/: lib.rs
(+12 files in other folders)
