[workspace]
members = [
    "crates/bin/hello-triangle",
    "crates/bin/hello-cube",
    "crates/bin/texture",
    "crates/bin/ui",
    "crates/bin/mesh",
    "crates/bin/debug",
    "crates/bin/depth-image",
    "crates/bin/bindless",
    "crates/bin/shader-hot-reload",
    "crates/bin/hello-frame-graph",
    "crates/lib/cinder",
    "crates/lib/frame-graph",
]
