[workspace]
members = [
    "crates/bin/hello-triangle",
    "crates/bin/hello-cube",
    "crates/bin/texture",
    "crates/bin/ui",
    "crates/bin/mesh",
    "crates/bin/debug",
    "crates/bin/depth-image",
    "crates/bin/bindless",
    "crates/bin/shader-hot-reload",
    "crates/lib/cinder",
]

[profile.dev.package.zero-copy-assets]
opt-level = 3

[profile.dev.package.rkyv]
opt-level = 3