[package]
name = "scene"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1"
tobj = "3.2.3"
cinder = {path = "../cinder"}
math = { git = "https://github.com/ArthurKValladares/Yet-Another-Math-Lib" }
rkyv = { version = "0.7", features = ["validation"] }
memmap = "0.7.0"
thiserror = "1"
meshopt = "0.1.9"
util = { path = "../util" }
image = "0.24.3"
normpath = "0.3.2"