[package]
name = "cinder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bumpalo = {git = "https://github.com/ArthurKValladares/bumpalo", features = ["collections", "allocator_api", "allocator-api2"]}
renderer = {path = "../renderer"}
render_graph = { path = "../render_graph" }
raw-window-handle = "0.5.0"
egui-integration = {path = "../egui-integration"}
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2", features = ["bundled", "raw-window-handle"] }
util = {path = "../util"}