[package]
name = "egui-integration"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1"
cinder = {path = "../cinder"}
util = {path = "../util"}
egui = "0.21"
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2", features = ["bundled", "raw-window-handle"] }
math = { git = "https://github.com/ArthurKValladares/Yet-Another-Math-Lib" }