[package]
name = "scene"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1"
tobj = "3.2.3"
math = { git = "https://github.com/ArthurKValladares/Yet-Another-Math-Lib" }
rayon = "1.6.1"
thiserror = "1"
zune-png = "0.2.0"
zero-copy-assets = {path = "../../lib/zero-copy-assets"}
rkyv = {version = "0.7.41", features = ["alloc", "validation"]}