[package]
name = "zero-copy-assets"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
memmap2 = "0.5.10"
rkyv = {version = "0.7.41", features = ["alloc", "validation"]}
thiserror = "1"
image = "0.24.5"

[profile.dev.package.image]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
codegen-units = 1